gitops/syncthing/additional-resources.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: syncthing
  labels:
    # Allow syncthing to use hostnetwork for it's Local LAN Discovery
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/version: latest
