gitops/syncthing/syncthing-app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: syncthing
  labels:
    # Allow syncthing to use hostnetwork for it's Local LAN Discovery
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/version: latest

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: syncthing
  namespace: syncthing
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/app: syncthing
  template:
    metadata:
      labels:
        app.kubernetes.io/app: syncthing
    spec:
      containers:
      - name: syncthing
        command:
        - syncthing
        - serve
        image: ghcr.io/syncthing/syncthing:2.1.5
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8384
          name: http
          protocol: TCP
        - containerPort: 22000
          name: sync
          protocol: UDP
        - containerPort: 22000
          name: sync-tcp
          protocol: TCP
        - containerPort: 21027
          name: discovery
          protocol: TCP
        resources:
          requests:
            cpu: 10m
            memory: 60M
        volumeMounts:
        # - mountPath: /var/syncthing-old/
        #   name: data-root-old
        - mountPath: /var/syncthing/
          name: data-root
        - mountPath: /var/syncthing/bs13-data
          name: data-bs13
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /rest/noauth/health
            port: http
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
      hostname: prod-syncthing
      hostNetwork: true
      securityContext:
        runAsNonRoot: true
        runAsUser: 99
        runAsGroup: 100
        fsGroup: 100
        # sysctls:
        # - name: fs.inotify.max_user_watches
        #   value: "204800"
      volumes:
      - name: tls-config
        secret:
          secretName: eso-syncthing-application
      - name: scripts
        configMap:
          name: syncthing-init
      - name: config-root
        emptyDir: {}
      - name: data-root
        persistentVolumeClaim:
          claimName: syncthing-root
      - name: data-bs13
        persistentVolumeClaim:
          claimName: syncthing-bs13

---
apiVersion: v1
kind: Service
metadata:
  name: syncthing
  namespace: syncthing
spec:
  selector:
    app.kubernetes.io/app: syncthing
  type: ClusterIP
  ports:
  - name: http
    port: 8384
    targetPort: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: syncthing-tls
  namespace: syncthing
spec:
  tls:
  - hosts:
      - syncthing.buc.sh
    secretName: cert-syncthing-buc-sh
  rules:
  - host: "syncthing.buc.sh"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: syncthing
            port:
              name: http
