gitops/syncthing/syncthing-metrics.yaml

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: syncthing-metrics
  namespace: syncthing
spec:
  rules:
  - host: "syncthing.10.0.0.21.nip.io"
    http:
      paths:
      - path: "/metrics"
        pathType: Prefix
        backend:
          service:
            name: syncthing
            port:
              name: http
      - path: "/api/syncthinghelper/metricsproxy"
        pathType: Prefix
        backend:
          service:
            name: syncthing-helper
            port:
              name: http
      - path: "/api/syncthinghelper/restart"
        pathType: Prefix
        backend:
          service:
            name: syncthing-helper
            port:
              name: http



# =========================================================================
# = Syncthing Helper is a Deployment-Mode of "https://github.com/thomasbuchinger/homelab-api"
# = It exists to
# = * Provide unauthenticated access to Syncthing Metrics (Syncthing itself enforces authentication)
# = * Provide a API to restart the Synching Container, in case the NFS-Share is causing problems
# =========================================================================
#
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: syncthing-helper
  namespace: syncthing
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/app: syncthing-helper
  template:
    metadata:
      labels:
        app.kubernetes.io/app: syncthing-helper
    spec:
      containers:
      - name: syncthing-helper
        command:
        - ./syncthing-helper
        image: ghcr.io/thomasbuchinger/homelab-api:main
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources:
          requests: {}
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /api/readyz
            port: http
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          seccompProfile:
            type: RuntimeDefault
      serviceAccountName: syncthing-helper
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
---
apiVersion: v1
kind: Service
metadata:
  name: syncthing-helper
  namespace: syncthing
spec:
  selector:
    app.kubernetes.io/app: syncthing-helper
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    targetPort: http
